- add static basic auth header in data services - fix undo timeout bug - fix undo z-index bug - add done/todo features to the README file

--- a/src/styles.css
+++ b/src/styles.css
@@ -60,4 +60,5 @@ body{
   left: 50%;
   transform: translateX(-50%);
   top: 1rem;
+  z-index: 999999999;
 }
